Fixes for night mode toggle on iOS

--- a/_scss/components/_header.scss
+++ b/_scss/components/_header.scss
@@ -55,19 +55,22 @@ header.page-header {
 
   label {
     position: relative;
+    display: inline-block;
+    width: 20px;
+    height: 12px;
     cursor: pointer;
     @include prefix(user-select, none);
 
     &::before,
     &::after {
       content: '';
+      position: absolute;
       @include prefix(box-sizing, border-box);
-      display: inline-block;
+      display: block;
     }
 
     &::before {
-      position: absolute;
-      top: 5px;
+      top: 3px;
       left: 3px;
       width: 6px;
       height: 6px;
@@ -77,8 +80,8 @@ header.page-header {
     }
 
     &::after {
-      width: 20px;
-      height: 12px;
+      width: 100%;
+      height: 100%;
       border: 2px solid $grey;
       border-radius: 6px;
     }
@@ -98,6 +101,7 @@ header.page-header {
   span {
     margin-left: 5px;
     font-size: 11px;
+    line-height: 0.9em;
 
     &.on {
       display: none;
